# WebsiteDownloader

./: CMakeLists.txt  main.cpp
ES/file/: file_write.hpp
ES/string/: parse_string_to.cpp  parse_string_to.hpp  streamable.hpp  string_contains.cpp  string_contains.hpp  string_starts_with.cpp  string_starts_with.hpp  to_lower.cpp  to_lower.hpp  utilities.hpp
ES/web/: ParsedUrl.cpp  ParsedUrl.hpp  get_html.hpp  tag_functions.cpp  tag_functions.hpp
